# lute-spreadsheet-to-meilisearch

./: .env.example  .gitignore  Cargo.toml  README.md  index.js  package.json  spreadsheet.xlsx
.github/workflows/: check.yml  generate-search-index.yml
src/: config.rs  data.rs  main.rs
