[package]
name = "rust-excel-to-json"
version = "0.1.0"
authors = ["Alexander Keliris <rigellute@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
calamine = "0.16.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
csv = "1.2.1"
anyhow = "1.0.71"


